@@ -1,3 +1,7 @@
+2007-08-21  Kai Tietz  <kai.tietz@onevision.com>
+
+	* ctype.h: wchar.h: Add isblank () and iswblank ().
+
 2007-08-21  Professor Brian Ripley  <ripley@stats.ox.ac.uk>
 
 	* stdargs.h: Remove spurious extra '#endif' in file.
