@@ -1,3 +1,8 @@
+2007-08-21  Kai Tietz  <kai.tietz@onevision.com>
+
+	* Makefile: Add isblank.c and iswblank.c.
+	* isblank.c, iswblank.c: New.
+
 2007-08-21  Professor Brian Ripley  <ripley@stats.ox.ac.uk>
 
 	* dllmain.c: Remove deprecated reference to global
